--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "scripts": {
+    "watch": "nodemon --watch ./api --ext ts --exec vercel dev --listen 5005",
     "start": "vercel dev --listen 5005",
     "deploy": "vercel"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.14",
-    "hono": "^3.12.0"
+    "hono": "^3.12.0",
+    "nodemon": "^3.0.2"
   },
   "devDependencies": {
     "vercel": "^32.4.1"
